@@ -12,9 +12,9 @@ Description:
 	
 License:
 	
-	All libraries are LGPL.
+	All libraries are LGPL Version 2.1
 	
-	All programs are GPL.
+	All programs are GPL Version 2.1.
 
 Parts:
 	unixODBC includes the following;
